# ss58-registry

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs  package-lock.json  package.json  ss58-registry.json  types.d.ts
.cargo/: config.toml
.github/workflows/: ci.yml  tag-publish.yml
benches/: benches.rs
example/: Cargo.toml
example/src/: main.rs
scripts/ci/: deny.toml
scripts/js/: build_js.mjs
src/: address_format.rs  error.rs  lib.rs  registry.rs  ss58-registry.json  tests.rs  token.rs
ss58-registry/: Cargo.toml
ss58-registry-derive/: Cargo.toml
ss58-registry-derive/src/: lib.rs
ss58-registry-derive/tests/: tests.rs
ss58-registry/src/: lib.rs
tests/: tests.rs
