[package]
name = "ss58-registry"
version = "0.0.1"
edition = "2018"
description = "Registry of wellknown SS58 id types"

[features]
default = ["std"]
std = []

[dependencies]
sp-debug-derive = "3.0.0"

[build-dependencies]
quote = { version = "1.0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "std",
  "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
proc-macro2 = "1.0"
Inflector = { version = "0.11.4", default-features = false }
unicode-xid = "0.2.2"
