[package]
name = "ss58-registry"
authors = ["Parity Technologies <admin@parity.io>"]
version = "1.11.0"
edition = "2021"
description = "Registry of known SS58 address types"
license = "Apache-2.0"
repository = "https://github.com/paritytech/ss58-registry/"

[features]
default = ["std"]
std = []

[build-dependencies]
quote = { version = "1.0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "std",
  "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
proc-macro2 = "1.0"
Inflector = { version = "0.11.4", default-features = false }
unicode-xid = "0.2.0"
