[package]
name = "ss58-registry"
authors = ["Parity Technologies <admin@parity.io>"]
version = "1.47.0"
edition = "2021"
description = "Registry of known SS58 address types"
license = "Apache-2.0"
repository = "https://github.com/paritytech/ss58-registry/"

[features]
default = ["std"]
std = ["num-format"]

[dependencies]
num-format = { version = "0.4.3", optional = true }

[build-dependencies]
quote = { version = "1.0.15", default-features = false }
serde = { version = "1.0.136", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.79", default-features = false, features = ["std"] }
proc-macro2 = "1.0.36"
Inflector = { version = "0.11.4", default-features = false }
unicode-xid = "0.2.2"
