[package]
name = "ss58-registry-derive"
version = "0.1.0"
edition = "2018"
description = "Registry of wellknown SS58 id types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
serde = {version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = {version = "1.0", default-features = false, features = ["std"] }
proc-macro2 = "1.0"

[dev-dependencies]
sp-debug-derive = "3.0.0"
