[package]
name = "ss58-registry"
version = "0.0.1"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
ss58-registry-derive = { path = "../ss58-registry-derive" }
sp-debug-derive = "3.0.0"
